edit group completed

--- a/src/App.scss
+++ b/src/App.scss
@@ -28,5 +28,10 @@ a {
       right: 0px;
       color: red;
     }
+    .edit-icon.groups {
+      position: absolute;
+      right: 35px;
+      color: green;
+    }
   }
 }
